<resources>
    <string name="app_name">CUTest</string>
    <string formatted="false" name="sub_title_format">v%s</string>
    <string name="action_settings">Settings</string>
    <string name="label_time">Execution time :</string>
    <string formatted="false" name="text_time_format">%s ms</string>
    <string name="text_time_zero">0 ms</string>
    <string name="label_runs">Runs :</string>
    <string name="label_errors">Errors :</string>
    <string name="label_failures">Failures :</string>
    <string name="text_runs_zero">0/0</string>
    <string name="text_zero">0</string>
    <string formatted="false" name="text_runs_format">%d/%d</string>
    <string formatted="false" name="end_test_passed_format">[OK]%s(%d ms)</string>
    <string formatted="false" name="end_test_failed_format">[FAILED]%s(error=%d, failure=%d)</string>
    <string formatted="false" name="error_source_line_format">Error: %s(%d)</string>
    <string formatted="false" name="failure_source_line_format">Failure: %s(%d)</string>
    <string name="button_run">Run</string>
    <string name="label_progress">Progress :</string>
    <string name="text_progress_none">None</string>
    <string name="tab_passed">Passed</string>
    <string name="tab_failed">Failed</string>
    <string name="title_details">Details</string>
    <string name="button_close">Close</string>
    <string formatted="false" name="load_so_error_format">Load lib%s.so error!</string>
</resources>
