<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/label_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_time"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/text_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/text_time_zero"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" >

            <TextView
                android:id="@+id/label_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_progress"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/text_progress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:minLines="2"
                android:text="@string/text_progress_none"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:minHeight="10dp"
            android:minWidth="10dip" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" >

            <TextView
                android:id="@+id/label_runs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_runs"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/text_runs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/text_runs_zero"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/label_errors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/label_errors"
                android:textAppearance="?android:attr/textAppearanceSmall"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/text_errors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/text_zero"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/label_failures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/label_failures"
                android:textAppearance="?android:attr/textAppearanceSmall"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/text_failures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/text_zero"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <TabHost
            android:id="@+id/tabhost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="36dp" />

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent">

                    <ListView
                        android:id="@+id/list_view_passed"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >
                    </ListView>

                    <ListView
                        android:id="@+id/list_view_failed"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >
                    </ListView>
                </FrameLayout>
            </LinearLayout>
        </TabHost>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
